# qrcode_factory

./: .gitignore  README.md  pyproject.toml  qrfactory.py  requirements.txt  test.py  test_vars.py
